--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -8,10 +8,10 @@
 <body>
     <header><h1>TechCon 2024 Conference</h1>
         <nav>
-            <a href="/about.html">About</a>
-            <a href="/schedule.html">Schedule</a>
-            <a href="/register.html">Register</a>
-            <a href="/contact.html">Contact</a>
+            <a href="/about.html">about</a>
+            <a href="/schedule.html">schedule</a>
+            <a href="/register.html">register</a>
+            <a href="/contact.html">contact</a>
         </nav>
     </header>
     <main>
